--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,8 +28,13 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+
+  firebase_core: ^2.0.0
+  firebase_auth: ^4.0.0
+  cloud_firestore: ^4.0.0
   flutter:
     sdk: flutter
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -58,6 +63,7 @@ flutter:
   uses-material-design: true
   assets:
     - assets/welcome.jpg
+    - assets/signin.jpg
 
 
   # To add assets to your application, add an assets section, like this:
