--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,7 @@ flutter:
   assets:
     - assets/welcome.jpg
     - assets/signin.jpg
+    - assets/homepage.jpg
 
   # To add assets to your application, add an assets section, like this:
   # assets:
