--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   firebase_core: ^2.4.1
   firebase_auth: ^4.2.7
   cloud_firestore: ^4.13.4
+  flutter_svg: ^2.0.7
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -63,6 +64,10 @@ flutter:
     - assets/welcome.jpg
     - assets/signin.jpg
     - assets/homepage.jpg
+    - assets/homeButton.svg
+    - assets/EyeButton.svg
+    - assets/massageButton.svg
+    - assets/profileButton.svg
 
   # To add assets to your application, add an assets section, like this:
   # assets:
