--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,21 @@ dependencies:
   firebase_auth: ^4.2.7
   cloud_firestore: ^4.13.4
   flutter_svg: ^2.0.7
+  uuid: ^4.5.1
+  intl: ^0.18.1
+  file_picker: ^6.1.1
+  firebase_storage: ^11.6.0
+  photo_view: ^0.14.0
+  cached_network_image: ^3.3.1
+  path_provider: ^2.1.2
+  share_plus: ^7.2.1
+  url_launcher: ^6.2.4
+  flutter_markdown: ^0.6.18
+  geolocator: ^10.1.0
+  image_picker: ^1.0.7
+  google_maps_flutter: ^2.5.3
+  flutter_map: ^6.1.0
+  latlong2: ^0.9.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
