--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -83,6 +83,7 @@ flutter:
     - assets/EyeButton.svg
     - assets/massageButton.svg
     - assets/profileButton.svg
+    - assets/chat_bg.png
 
   # To add assets to your application, add an assets section, like this:
   # assets:
