--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,11 +49,13 @@ dependencies:
   google_maps_flutter: ^2.5.3
   flutter_map: ^6.1.0
   latlong2: ^0.9.0
+  geocoding: ^2.1.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   flutterfire_cli: ^1.2.0
+  provider: ^6.1.5
 
 dev_dependencies:
   flutter_test:
