--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,7 @@ dependencies:
   provider: ^6.1.5
   open_filex: ^4.7.0
   flutter_map_cancellable_tile_provider: ^2.0.0
+  fl_chart: ^1.0.0
 
 dev_dependencies:
   flutter_test:
