--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,15 +51,17 @@ dependencies:
   latlong2: ^0.9.0
   geocoding: ^2.1.0
   http: ^1.2.0
+  fl_chart: ^0.65.0
+  flutter_hooks: ^0.20.5
+  hooks_riverpod: ^2.4.10
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.8
+  cupertino_icons: ^1.0.2
   flutterfire_cli: ^1.2.0
   provider: ^6.1.5
   open_filex: ^4.7.0
   flutter_map_cancellable_tile_provider: ^2.0.0
-  fl_chart: ^1.0.0
 
 dev_dependencies:
   flutter_test:
