--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   fl_chart: ^0.65.0
   flutter_hooks: ^0.20.5
   hooks_riverpod: ^2.4.10
+  path: ^1.8.3
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
