--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,9 +30,11 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  firebase_core: ^2.4.1
+  firebase_core: ^2.24.2
+  cloud_functions: ^4.5.5
+  firebase_messaging: ^14.7.10
+  cloud_firestore: ^4.13.6
   firebase_auth: ^4.2.7
-  cloud_firestore: ^4.13.4
   flutter_svg: ^2.0.7
   uuid: ^4.5.1
   intl: ^0.18.1
